Сделал UI сервера - сделал передачу данных от UI системе - интегрировал UI сервера в систему

--- a/Server/Src/GUI/server.ui
+++ b/Server/Src/GUI/server.ui
@@ -100,7 +100,7 @@
           <number>1</number>
          </property>
          <property name="sliderPosition">
-          <number>20</number>
+          <number>35</number>
          </property>
          <property name="orientation">
           <enum>Qt::Orientation::Horizontal</enum>
@@ -179,10 +179,10 @@
           <number>100</number>
          </property>
          <property name="singleStep">
-          <number>0</number>
+          <number>10</number>
          </property>
          <property name="tracking">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="orientation">
           <enum>Qt::Orientation::Horizontal</enum>
@@ -259,6 +259,9 @@
          </property>
          <property name="maximum">
           <number>100</number>
+         </property>
+         <property name="singleStep">
+          <number>10</number>
          </property>
          <property name="orientation">
           <enum>Qt::Orientation::Horizontal</enum>
