--- a/Server/Src/GUI/server.ui
+++ b/Server/Src/GUI/server.ui
@@ -127,6 +127,9 @@
        <property name="spacing">
         <number>15</number>
        </property>
+       <property name="sizeConstraint">
+        <enum>QLayout::SizeConstraint::SetMaximumSize</enum>
+       </property>
        <property name="leftMargin">
         <number>10</number>
        </property>
@@ -208,6 +211,9 @@
       <layout class="QHBoxLayout" name="VertIntHBox">
        <property name="spacing">
         <number>15</number>
+       </property>
+       <property name="sizeConstraint">
+        <enum>QLayout::SizeConstraint::SetMaximumSize</enum>
        </property>
        <property name="leftMargin">
         <number>10</number>
