--- a/Client/Src/GUI/client.ui
+++ b/Client/Src/GUI/client.ui
@@ -45,7 +45,7 @@
        <item row="0" column="0">
         <widget class="QGraphicsView" name="graphicsView">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
