--- a/Client/Src/GUI/client.ui
+++ b/Client/Src/GUI/client.ui
@@ -53,7 +53,7 @@
          <property name="minimumSize">
           <size>
            <width>800</width>
-           <height>600</height>
+           <height>800</height>
           </size>
          </property>
         </widget>
@@ -108,7 +108,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox"/>
+          <widget class="QComboBox" name="BackgroundColorCombBox"/>
          </item>
         </layout>
        </item>
@@ -143,7 +143,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox_2"/>
+          <widget class="QComboBox" name="CrossColorCombBox"/>
          </item>
         </layout>
        </item>
@@ -170,7 +170,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Угол камеры</string>
+            <string>Угол камеры: </string>
            </property>
            <property name="scaledContents">
             <bool>false</bool>
@@ -186,7 +186,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Отступ по горизонтали</string>
+            <string>Отступ по горизонтали: </string>
            </property>
           </widget>
          </item>
@@ -199,7 +199,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Отступ по вертикали</string>
+            <string>Отступ по вертикали: </string>
            </property>
           </widget>
          </item>
